[package]
name = "dtz-identity-auth"
version = "0.7.9"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "Apache-2.0"
repository = "https://github.com/DownToZero-Cloud/dtz-identity-auth/"
description = "Provides authentication traits for DownToZero backends."

[dependencies]
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7", features = ["http2"] }
uuid = { version = "1", features = ["serde", "v4"] }
cookie = "0.18"
hyper = { version = "0.14", features = ["http1", "http2"] }
hyper-rustls = { version = "0.25", features = ["http1", "http2"] }
serde_json = "1"
serde_urlencoded = "0.7"
once_cell = "1.19"
lru_time_cache = "0.11"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
base64 = "0.21"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }