[package]
name = "dtz-identity-auth"
version = "1.0.0"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "Apache-2.0"
repository = "https://github.com/DownToZero-Cloud/dtz-identity-auth/"
description = "Provides authentication traits for DownToZero backends."
rust-version = "1.71"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
axum = { version = "0.7", features = ["http2"] }
base64 = "0.22"
uuid = { version = "1", features = ["serde", "v4"] }
cookie = "0.18"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-rustls = { version = "0.26", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
lru_time_cache = "0.11"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
