[package]
name = "dtz-identity-auth"
version = "2.0.1"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "Apache-2.0"
repository = "https://github.com/DownToZero-Cloud/dtz-identity-auth/"
description = "Provides authentication traits for DownToZero backends."
rust-version = "1.75"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
axum-core = { version = "0.5" }
base64 = "0.22"
cookie = "0.18"
dtz-identifier = { version = "1" }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
lru_time_cache = "0.11"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1" }
reqwest = { version = "0.12" }
axum = { version = "0.8", features = ["http2"] }
